Fix formatting in templates and add comments

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <meta content="A platform that connects Ukrainians who need help with those who want to help." name="description">
-  <meta content="Ukraine, Ukraininan refugees, Help, charity, volunteering, free furniture, give away items, give away, free services" name="keywords">
+  <meta content="Ukraine, Ukraininan refugees, help Ukraine, support Ukraine, Europe for Ukraine, charity, volunteering, give away, free" name="keywords">
   <meta name="google-site-verification" content="tzjivbjXG2fsyF_Voc9PLpldhS-_uvCKp37X6zv0gk8" />
 
   <!-- Favicons -->
