--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <section>
-    <div class="row">
+    <div class="row mx-1">
         <div class="container-fluid col-lg-8 mt-1">
             <div class="d-flex align-items-center">
                 <h1 class="section-title text-start pb-0">Edit Profile</h1>
