--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -9,14 +9,11 @@
             <div class="col-xl-7 col-lg-9 text-center">
                 <img class="search-logo my-4" src="{% static 'assets/img/logo.png' %}"
                     alt="logo - yellow and blue heart made of leaves">
-
+                <!-- search bar -->
                 <div class="input-group">
                     <input id="search-input" name="q" type="search" class="form-control" placeholder="Search">
-                    <!-- <button id="search-button" class="btn btn-primary" type="submit"><i
-                            class='bx bx-search'></i></button> -->
                 </div>
-
-
+                <!-- checkboxes -->
                 <div class="mt-3">
                     {% if 'posts_list/give' in request.path or 'posts_list/all' in request.path %}
                     <input type="checkbox" id="give" name="give" checked>
@@ -40,6 +37,7 @@
         {% include 'posts.html' %}
 
 </section>
+<!-- handle checking/uncheking checkboxes -->
 <script type="text/javascript">
     $('#receive').on('change', function () {
         if ($(this).not(':checked') && ($('#give').is(':checked'))) {
@@ -64,7 +62,7 @@
             document.location.href = "{% url 'main:posts_list' 'all' %}"
         }
     })
-
+    // live search
     let search_input = $('#search-input')
     const listings = $('#listings')
     const delay_by_in_ms = 700
