--- a/templates/update.html
+++ b/templates/update.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <section>
-    <div class="row">
+    <div class="row mx-1">
         <div class="container-fluid col-lg-8 mt-1">
             <div class="d-flex align-items-center">
                 <h1 class="section-title text-start pb-0">Edit Post "{{ post.title|title }}"</h1>
@@ -16,7 +16,6 @@
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% crispy form %}
-                <!-- <button type="submit" class="btn btn-primary mb-2 mt-2 px-5" value="Upload">Update</button> -->
             </form>
         </div>
     </div>
