--- a/templates/messages.html
+++ b/templates/messages.html
@@ -11,7 +11,7 @@
         <div class="col-12 col-md-10 col-lg-8 col-xl-6" id="js-framework-home"></div>
         {{ name|json_script:'name' }}
         {{ id|json_script:'id' }}
-        <!-- bundle file with native JavaScript application logic -->
+        <!-- bundle file with JavaScript application logic -->
         <script src="{% static 'js-bundle.js' %}"></script>
       </div>
     </div>
