Bundle main js to avoid console errors

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,18 +91,15 @@
               class="collapse show"
               data-bs-parent=".faq-list">
               <p>
-                <pre>We take the security and privacy of our users very seriously. We
-                use SSL encryption to protect all user information and employ
+                We take the security and privacy of our users very seriously. We
+                use modern security features to protect all user information and employ
                 strict access controls to prevent unauthorized access. All new
                 users go through phone and email verification. Users are
                 required to use their real photos as a profile picture. In case
                 of doubts or complaints, moderators might require an ID. All
-                content is moderated.</pre><br><pre>Our team of trained professionals reviews
-                and flags any inappropriate content. Our moderation process
-                follows strict guidelines and policies to ensure that the
-                website remains safe and appropriate for all users. If you come
+                content is moderated. If you come
                 across any content that you find inappropriate, suspect fraud,
-                or have any doubts, please do not hesitate to contact us.</pre>
+                or have any doubts, please do not hesitate to contact us.
               </p>
             </div>
           </li>
@@ -118,10 +115,10 @@
             </a>
             <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
               <p>
-                <pre>All new users must pass a phone and email verification process.
+                All new users must pass a phone and email verification process.
                 To ensure authenticity, users must use their genuine photos as
                 their profile picture. In the event of any doubts or complaints,
-                our moderators may request an ID verification.</pre>
+                our moderators may request an ID verification.
               </p>
             </div>
           </li>
@@ -137,9 +134,9 @@
             </a>
             <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                <pre>Look through the posts and start a chat with someone whose offer
+                Look through the posts and start a chat with someone whose offer
                 interests you, or post your own request for what you need help
-                with. It will be published after moderation.</pre>
+                with. It will be published after moderation.
               </p>
             </div>
           </li>
