--- a/templates/messages.html
+++ b/templates/messages.html
@@ -12,7 +12,7 @@
         {{ name|json_script:'name' }}
         {{ id|json_script:'id' }}
         <!-- bundle file with JavaScript application logic -->
-        <script src="{% static 'js-bundle.js' %}"></script>
+        <script src="{% static 'chat.js-bundle.js' %}"></script>
       </div>
     </div>
   </div>
