--- a/templates/base.html
+++ b/templates/base.html
@@ -119,7 +119,7 @@
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
   </script>
   <!-- Main JavaScript -->
-  <script src="{% static 'assets/js/main.js' %}"></script>
+  <script src="{% static 'main.js-bundle.js' %}"></script>
 
 </body>
 
