--- a/templates/base.html
+++ b/templates/base.html
@@ -90,9 +90,9 @@
 
           <div class="col-lg-2 col-md-6 footer-links social">
             <ul>
-              <br>
+
               <li><a href="https://www.whatsapp.com" target="_blank"
-                aria-label="Whatsapp Chat with Help U (opens in a new tab)" class="whatsapp"><i class="bx bxl-whatsapp"></i></a></li>
+                aria-label="Whatsapp Chat with Help U (opens in a new tab)" class="whatsapp pt-4"><i class="bx bxl-whatsapp"></i></a></li>
               <li><a href="https://telegram.org" target="_blank"
                 aria-label="Telegram Chat with Help U (opens in a new tab)" class="telegram"><i class="bx bxl-telegram"></i></a></li>
               <li><a href="https://www.facebook.com" target="_blank"
