--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
           space where nobody is going to judge anyone. Sign up to browse the
           posts and make a difference now!
         </p>
-        <a href="https://war.ukraine.ua/" target="_blank"
+        <a href="https://war.ukraine.ua/" target="_blank" title="the official website of Ukraine (opens in a new tab)"
                 aria-label="the official website of Ukraine (opens in a new tab)" class="btn-learn-more">Learn More</a>
       </div>
     </div>
