--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
     data-aos-delay="100"
   >
     <div class="row justify-content-center">
-      <div class="col-xl-7 col-lg-9 text-center">
+      <div class="col-xl-7 col-lg-9 text-center img-container">
         <img
-          class="img-logo"
+          class="img-logo" height="341" width="316"
           src="{% static 'assets/img/logo.png' %}"
           alt="logo - yellow and blue heart made of leaves"
         />
@@ -58,7 +58,7 @@
           posts and make a difference now!
         </p>
         <a href="https://war.ukraine.ua/" target="_blank" title="the official website of Ukraine (opens in a new tab)"
-                aria-label="the official website of Ukraine (opens in a new tab)" class="btn-learn-more">Learn More</a>
+                aria-label="the official website of Ukraine (opens in a new tab)" class="btn-learn-more">Ukraine Now</a>
       </div>
     </div>
   </section>
@@ -70,7 +70,7 @@
       <div class="section-title">
         <h2>Frequently Asked Questions</h2>
         <p>
-          Below you'll find answers to the questions we get asked the most about
+          Below you'll find answers to the questions we get asked the most
           Help U
         </p>
       </div>
