Add alt tags to auth pages

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -14,7 +14,7 @@
 
   <div class="row">
     <div class="col-md-12 d-flex justify-content-center mt-xl-0 mt-lg-5 mt-md-5 mt-5">
-      <img class="search-logo" src="{% static 'assets/img/logo.png' %}">
+      <img class="search-logo" alt="logo - yellow and blue heart made of leaves" src="{% static 'assets/img/logo.png' %}">
     </div>
   </div>
 
