--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -11,7 +11,7 @@
 <div class="container login-block">
   <div class="row">
     <div class="col-md-12 d-flex justify-content-center mt-xl-1 mt-lg-4 mt-md-5 mt-5">
-      <img class="search-logo" src="{% static 'assets/img/logo.png' %}">
+      <img class="search-logo" alt="logo - yellow and blue heart made of leaves" src="{% static 'assets/img/logo.png' %}">
     </div>
   </div>
 
