--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,7 @@
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 
   <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <title>Help U</title>
 </head>
