--- a/templates/new.html
+++ b/templates/new.html
@@ -9,7 +9,7 @@
         <div class="container-fluid col-lg-8 mt-1">
             <div class="d-flex align-items-center">
                 <h1 class="section-title text-start pb-0">Create a New Post</h1>
-                <img class="search-logo" style="scale: 0.5;" src="{% static 'assets/img/logo_small.png' %}">
+                <img class="search-logo" style="scale: 0.5;" alt="Site logo" src="{% static 'assets/img/logo_small.png' %}">
             </div>
             <form method="post"
             enctype="multipart/form-data">
