--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -11,7 +11,7 @@
         <div class="container-fluid col-lg-8 mt-1">
             <div class="d-flex align-items-center">
                 <h1 class="section-title text-start pb-0">Edit Profile</h1>
-                <img class="search-logo" style="scale: 0.5;" src="{% static 'assets/img/logo_small.png' %}">
+                <img class="search-logo" style="scale: 0.5;" alt="Site logo" src="{% static 'assets/img/logo_small.png' %}">
                 
             </div>
             <h2>{{ request.user }}</h2>
