Rebundle JS for better performance

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,6 @@
   <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
 
   <!-- External CSS -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -24,7 +23,7 @@
   <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 
   <!-- jQuery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 
   <title>Help U</title>
 </head>
