Fix indentation and empty lines

--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -97,7 +97,7 @@
         // setTimeout returns the ID of the function to be executed
         scheduled_function = setTimeout(ajax_call, delay_by_in_ms, request_parameters);
     })
-    
+
     // map toolkit
     $('.geo')
         .mouseover(function () {
@@ -114,8 +114,7 @@
     aria-labelledby="staticBackdropLabel" style="display: block;" aria-modal="true" role="dialog">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-header">
-            </div>
+            <div class="modal-header"></div>
             <div class="modal-body">
                 Please, complete your user profile before browsing the posts.
             </div>
