Add missing accessible names to buttons: chat, search

--- a/templates/posts_list.html
+++ b/templates/posts_list.html
@@ -8,7 +8,8 @@
         <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-9 text-center">
                 <img class="search-logo my-4" src="{% static 'assets/img/logo.png' %}"
-                    alt="logo - yellow and blue heart made of leaves">
+                    alt="logo - yellow and blue heart made of leaves"
+                    height="140px" width="auto">
                 <!-- search bar -->
                 <div class="input-group">
                     <input id="search-input" name="q" type="search" class="form-control" placeholder="Search">
