Fix html and css accrding to validators recommendation

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -97,7 +97,7 @@ body {
   /* disable for mobile devices */
   @media screen and (max-width: 768px) {
     [data-aos-delay] {
-      transition-delay: 0 !important;
+      transition-delay: 0s !important;
     }
   }
 
