--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 
   <meta content="A platform that connects Ukrainians who need help with those who want to help." name="description">
   <meta content="Ukraine, Ukraininan refugees, help Ukraine, support Ukraine, Europe for Ukraine, charity, volunteering, give away, free" name="keywords">
-  <meta name="google-site-verification" content="tzjivbjXG2fsyF_Voc9PLpldhS-_uvCKp37X6zv0gk8" />
+  <meta name="google-site-verification" content="tzjivbjXG2fsyF_Voc9PLpldhS-_uvCKp37X6zv0gk8">
 
   <!-- Favicons -->
   <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
